--- a/projects/ng-aquila/src/shared-styles/utilities.scss
+++ b/projects/ng-aquila/src/shared-styles/utilities.scss
@@ -6,3 +6,4 @@
 @include create-margin-classes();
 @include create-font-weight-classes();
 @include create-hidden-classes();
+@include create-modal-margin-class();
